Feature/use optionals where possible (#4)
* Added Optionals to RoleRepository and adjusted code that used it.

* Added Optionals to UserDetailRepository and adjusted code that used it.

* Added Optionals to CarDetailRepository and adjusted code that used it.

* Moved mapper package to service package and edited UserDetail domain to use mapper in Service.

* Huge refactor. Moved all logic from controllers to services and changed return type of services to return DTOs.

* Changed FuelType, ExploitationType and DrivingType repositories to return optionals.

* Used optionals in Repair and FuelEconomy repositories and adjusted code.

* Updated TODO.

--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 TODO List as not using Jira:
 Backend:
   Improvements:
-	- Use optionals where possible
     - Use multiple profiles (application.yml)
 	- Add sql script to changelog that creates dummy data
 	- Add swagger to application
@@ -13,7 +12,7 @@ Backend:
 
 Frontend:
   - Add support for refresh token
-  - Add placeholder for images of car
+  - Add drop box for uploading images of car
   - Add routing params in frontend application
   - Remove Redux where isn't needed
   - Start using React Hooks
